test/libsolidity/syntaxTests/natspec/docstring_empty_tag.sol
abstract contract C {
    /// @param
    function vote(uint id) public;
}
// ----
// DocstringParsingError: End of tag @param not found
